locust-descriptors/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    role: locust-master
  name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      role: locust-master
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: locust-master
    spec:
      containers:
        - image: grubykarol/locust:0.8.1-py3.6
          imagePullPolicy: IfNotPresent
          name: locust-master
          volumeMounts:
            - mountPath: /locust
              name: locust-scripts
          ports:
            - containerPort: 5557
              name: comm
            - containerPort: 5558
              name: comm-plus-1
            - containerPort: 8089
              name: web-ui
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: locust-scripts
          configMap:
            name: scripts-cm
